<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="landing_package_name">com.wayapay.ng.landingpage</string>
    <string name="get_date_at_time_format">%1$s at %2$s</string>
    <string name="organized_by_format">Organized by %1$s</string>
    <string name="interested_format">%1$s interested</string>
    <string name="going_format">%1$s going</string>
    <string name="register_count_format">Registered: %1$s</string>
    <string name="donation_count_format">%1$s Donations</string>
    <string name="chat">Chat</string>
    <string name="alert">Alert</string>
    <string name="alerts">Alerts</string>
    <string name="acct_">Acct:</string>
    <string name="invite_code_">Invite Code:</string>
    <string name="create">Create</string>
    <string name="share_a_post_or_write_what_is_on_your_mind">Share a post or write what is on your mind</string>
    <string name="share_a_photo_or_write_something">Share a photo or write something</string>
    <string name="pages">Pages</string>
    <string name="create_a_page_for_your_business_of_fans">Create a page for your business of fans</string>
    <string name="event">Event</string>
    <string name="bring_people_together_with_public_or_private_events">Bring people together with public or private events</string>
    <string name="group">Group</string>
    <string name="create_a_private_or_public_group_of_interest">Create a private or public group of interest</string>
    <string name="auction">Auction</string>
    <string name="auction_items_privately_or_publicly">Auction items privately or publicly</string>
    <string name="continue_">Continue</string>
    <string name="event_information">Event Information</string>
    <string name="what_is_the_name_of_your_event">What is the name of your event?</string>
    <string name="title_of_event">Title of Event</string>
    <string name="name_your_event_along_with_why_attendees_should_come_including">Name your event, along with why attendees should come, including</string>
    <string name="organizer_s_name">Organizer\'s name</string>
    <string name="tags">Tags</string>
    <string name="use_tags_to_improve_your_discovery">Use tags to improve your discovery</string>
    <string name="public_">Public</string>
    <string name="private_">Private</string>
    <string name="is_the_event_private_or_public">Is the event private or public?</string>
    <string name="where_is_the_event_location">Where is the event location</string>
    <string name="search_location">Search location</string>
    <string name="physical">Physical</string>
    <string name="virtual">Virtual</string>
    <string name="where_is_the_location_of_your_event">Where is the location of your event \n</string>
    <string name="date_and_time">Date and time</string>
    <string name="tell_the_your_attendees_when_they_event_will_start_and_end_so_they_plan_for_it">Tell the your attendees when they event will start and end so they plan for it</string>
    <string name="select_a_feature_date">Select a future date</string>
    <string name="event_starts">Event starts</string>
    <string name="start_time">Start time</string>
    <string name="event_ends">Event ends</string>
    <string name="end_time">End time</string>
    <string name="time_format_text">0:00pm</string>
    <string name="date_format_hint">DD/MM/YYYY</string>
    <string name="ticketing_fee">Ticketing fee</string>
    <string name="tell_your_attendees_if_this_is_a_paid_or_free_event_and_how_the_price_works">Tell your attendees if this is a paid or free event, and how the price works</string>
    <string name="free_to_attend">Free to attend</string>
    <string name="free_to_attend_or_paid_event">Free to attend or paid event</string>
    <string name="paid_event">Paid event</string>
    <string name="url_link_to_event">Url link to event</string>
    <string name="event_location">Event location</string>
    <string name="please_input_the_link_to_the_event">Please input the link to the event</string>
    <string name="publish">Publish</string>
    <string name="registered_">Registered: </string>
    <string name="at">at</string>
    <string name="fee_">Fee:</string>
    <string name="wayagram">Wayagram</string>
    <string name="interested">Interested</string>
    <string name="organized_by">Organized by</string>
    <string name="moments">Moments</string>
    <string name="events">Events</string>
    <string name="make_reservations">Make reservations</string>
    <string name="edit_event_info">Edit event info</string>
    <string name="share">Share</string>
    <string name="report_event">Report event</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="create_new_post">Create new post</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="pool_length">Pool Length</string>
    <string name="days">Days</string>
    <string name="mins">Mins</string>
    <string name="hours">Hours</string>
    <string name="paid_vote">Paid vote</string>
    <string name="by_sending_you_agree_with_our_terms_and_conditions_of_poll_creation">By sending, you agree with our <a href="https://www.wayapaychat.com/terms-of-use">terms and conditions</a> of poll creation</string>
    <string name="by_sending_you_agree_with_our_terms_and_conditions_of_product_post">By sending, you agree with our <a href="https://www.wayapaychat.com/terms-of-use">terms and conditions</a> of product post</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_1">Choice 1</string>
    <string name="enter_a_choice">Enter a choice</string>
    <string name="set_two_options">Set 2 options</string>
    <string name="product_post">Product Post</string>
    <string name="poll_post">Poll Post</string>
    <string name="make_payment">Make Payment</string>
    <string name="okay">Okay</string>
    <string name="payment_info">Payment Info</string>
    <string name="payment_info_description">All paid votes will be credited into your Rubies Bank (default wallet) at the end of the post duration. A commission of total payment will be paid to Waya</string>
    <string name="attach_price_to_product">Attach price to product</string>
    <string name="add_product_image">Add product image</string>
    <string name="buy">Buy</string>
    <string name="product_payment_info">Any product paid for will be credited into your Rubies Bank account (default wallet)</string>
    <string name="create_a_page">Create a page</string>
    <string name="page_name">Page name</string>
    <string name="use_the_name_of_your_business_brand_or_organization">Use the name of your business brand or organization</string>
    <string name="e_g_ecommerce_finance_healthcare">e.g Ecommerce, finance, healthcare</string>
    <string name="write_about_what_you_do_and_why_do_you_standout">Write about what you do and why do you standout</string>
    <string name="character_limit_255">Character limit: 255</string>
    <string name="images">Images</string>
    <string name="profile_photo_optional">Profile photo (optional)</string>
    <string name="use_a_logo_or_image_that_helps_people_identity_this_page_in_search_result">Use a logo or image that helps people identity this page in search result</string>
    <string name="use_a_logo_or_image_that_helps_people_identity_this_group_in_search_result">Use a logo or image that helps people identity this group in search result</string>
    <string name="cover_photo_optional">Cover photo (optional)</string>
    <string name="use_an_image_to_represent_what_the_page_is_about">Use an image to represent what the page is about</string>
    <string name="use_an_image_to_represent_what_the_group_is_about">Use an image to represent what the group is about</string>
    <string name="a_url_that_links_to_your_website_if_you_have_any">A url that links to your website if you have any</string>
    <string name="website_url">Website url</string>
    <string name="www_mywebsite_com">www.mywebsite.com</string>
    <string name="is_your_group_private">Is your group private?</string>
    <string name="select_page_category">Select page category</string>
    <string name="follow">Follow</string>
    <string name="show_more">Show more</string>
    <string name="your_post_has_been_created">Your post has been created</string>
    <string name="your_page_has_been_created">Your page has been created</string>
    <string name="your_event_has_been_created">Your event has been created</string>
    <string name="group_name">Group name</string>
    <string name="what_is_the_name_of_your_group">What is the name of your group</string>
    <string name="make_group_private">Make group private</string>
    <string name="write_a_short_description_of_the_group">Write a short description of the group</string>
    <string name="search">Search</string>
    <string name="join">Join</string>
    <string name="some_topics_to_follow">Some Topics to follow</string>
    <string name="groups_to_join">Groups to join</string>
    <string name="people_to_follow">People to follow</string>
    <string name="pages_to_join">Pages to join</string>
    <string name="mute">Mute</string>
    <string name="invite">Invite</string>
    <string name="report">Report</string>
    <string name="exit">Exit</string>
    <string name="pages_to_follow">Pages to follow</string>
    <string name="groups_and_pages"><![CDATA[Groups & Pages]]></string>
    <string name="groups">Groups</string>
    <string name="my_groups">My Groups</string>
    <string name="groups_i_m_in">Groups I\'m in</string>
    <string name="my_pages">My Pages</string>
    <string name="pages_i_follow">Pages I follow</string>
    <string name="un_follow">Un follow</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="under_construction">Under Construction</string>
    <string name="wayachat">Wayachat</string>
    <string name="interesting_posts">Interesting posts</string>
    <string name="votes_per_user">Votes per user</string>
    <string name="donation_information">Donation Information</string>
    <string name="give_your_cause_a_title_and_description_so_users_can_relate">Give your cause a title and description so users can relate</string>
    <string name="title_of_cause">Title of cause</string>
    <string name="what_is_the_name_of_your_cause">What is the name of your cause?</string>
    <string name="who_is_organizing_this_donation">Who is organizing this donation?</string>
    <string name="how_much_are_you_trying_to_raise">How much are you trying to raise</string>
    <string name="let_users_know_if_donation_is_private_or_public_and_how_much_you_are_trying_to_raise">Let users know if donation is private or public, and how much you are trying to raise</string>
    <string name="is_donation_public_or_private">Is donation public or private?</string>
    <string name="display_contribution">Display contribution</string>
    <string name="hide_contribution">Hide contribution</string>
    <string name="chose_either_to_display_or_hide_donation_to_user">Chose either to display or hide donation to user</string>
    <string name="target">Target</string>
    <string name="i_have_read_and_accepted_the_terms_and_condition_for_donation_post">I have read and accepted the <a href="https://www.wayapaychat.com/terms-of-use">terms and conditions</a> for donation post</string>
    <string name="donation">Donation</string>
    <string name="give_users_more_detail_on_the_purpose_of_the_donation">Give users more detail on the purpose of the donation</string>
    <string name="total_donation_is_public">Total donation is public</string>
    <string name="total_donation_is_private">Total donation is private</string>
    <string name="short_description">Short description</string>
    <string name="your_donation_has_been_created_successfully">Your donation has been created successfully</string>
</resources>