<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.wayapay.ng.landingpage.group.GroupViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".group.CreateGroupFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/create_a_page"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/primary_text_color"/>

            <EditText
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:layout_marginTop="8dp"
                android:hint="@string/group_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_the_name_of_your_group"/>

            <EditText
                android:id="@+id/group_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLength="255"
                android:hint="@string/description"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_a_short_description_of_the_group"/>
            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_limit_255"
                android:textColor="@color/colorPrimary"/>

            <CheckBox
                android:id="@+id/private_check_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/make_group_private"/>
        </LinearLayout>

    </ScrollView>
</layout>