<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.wayapay.ng.landingpage.donation.DonationViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".donation.CreateDonationFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary_text_color"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/donation_information"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/give_your_cause_a_title_and_description_so_users_can_relate"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="@color/waya_green" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="1dp"
                    android:background="@android:color/transparent"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="1dp"
                    android:background="@android:color/transparent"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="1dp"
                    android:background="@android:color/transparent"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="1dp"
                    android:background="@android:color/transparent"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:theme="@style/EditTextTheme"
                android:layout_marginTop="20dp"
                android:hint="@string/title_of_cause"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_the_name_of_your_cause"/>

            <EditText
                android:id="@+id/organizers_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:theme="@style/EditTextTheme"
                android:layout_marginTop="16dp"
                android:hint="@string/organizer_s_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_is_organizing_this_donation"/>

            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:theme="@style/EditTextTheme"
                android:layout_marginTop="16dp"
                android:hint="@string/short_description"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/give_users_more_detail_on_the_purpose_of_the_donation"/>

            <EditText
                android:id="@+id/tags_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                android:inputType="none"
                android:layout_marginTop="16dp"
                android:hint="@string/tags"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_tags_to_improve_your_discovery"/>

        </LinearLayout>

    </ScrollView>
</layout>