<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.wayapay.ng.landingpage.events.EventViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".events.EventInfoFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/primary_text_color"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:text="@string/event_information"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_your_event_along_with_why_attendees_should_come_including"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="@color/waya_green" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="1dp"
                    android:background="@android:color/transparent"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="1dp"
                    android:background="@android:color/transparent"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="1dp"
                    android:background="@android:color/transparent"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="1dp"
                    android:background="@android:color/transparent"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>

            <EditText
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:text="@{viewModel.wayaEvent.title}"
                android:theme="@style/EditTextTheme"
                android:layout_marginTop="20dp"
                android:hint="@string/title_of_event"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_the_name_of_your_event"/>

            <EditText
                android:id="@+id/organizers_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:text="@{viewModel.wayaEvent.organizer}"
                android:theme="@style/EditTextTheme"
                android:layout_marginTop="16dp"
                android:hint="@string/organizer_s_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_the_name_of_your_event"/>

            <EditText
                android:id="@+id/tags_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextTheme"
                android:inputType="none"
                android:layout_marginTop="16dp"
                android:hint="@string/tags"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_tags_to_improve_your_discovery"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_private"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/private_"/>
                <RadioButton android:id="@+id/radio_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/public_"/>
            </RadioGroup>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/private_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_the_event_private_or_public" />

        </LinearLayout>

    </ScrollView>
</layout>