<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.wayapay.ng.landingpage.pages.PagesViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".pages.CreatePageFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/create_a_page"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/primary_text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/page_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:inputType="textCapWords"
                android:hint="@string/page_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/use_the_name_of_your_business_brand_or_organization"
                app:layout_constraintEnd_toEndOf="@+id/page_name_edit_text"
                app:layout_constraintStart_toStartOf="@+id/page_name_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/page_name_edit_text" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                app:layout_constraintEnd_toEndOf="@+id/page_name_edit_text"
                app:layout_constraintStart_toStartOf="@+id/page_name_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/textView33" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/e_g_ecommerce_finance_healthcare"
                app:layout_constraintEnd_toEndOf="@+id/category_spinner"
                app:layout_constraintStart_toStartOf="@+id/category_spinner"
                app:layout_constraintTop_toBottomOf="@+id/category_spinner" />

            <EditText
                android:id="@+id/description_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/description"
                android:inputType="textCapSentences"
                android:maxLength="255"
                app:layout_constraintEnd_toEndOf="@+id/textView34"
                app:layout_constraintStart_toStartOf="@+id/textView34"
                app:layout_constraintTop_toBottomOf="@+id/textView34" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/write_about_what_you_do_and_why_do_you_standout"
                app:layout_constraintEnd_toEndOf="@+id/description_edit_text"
                app:layout_constraintStart_toStartOf="@+id/description_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/description_edit_text" />

            <TextView
                android:id="@+id/textView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_limit_255"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="@+id/textView35"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <EditText
                android:id="@+id/website_url"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="textUri"
                android:hint="@string/www_mywebsite_com"
                app:layout_constraintEnd_toEndOf="@+id/textView35"
                app:layout_constraintStart_toStartOf="@+id/textView36"
                app:layout_constraintTop_toBottomOf="@+id/textView36" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/a_url_that_links_to_your_website_if_you_have_any"
                app:layout_constraintEnd_toEndOf="@+id/website_url"
                app:layout_constraintStart_toStartOf="@+id/website_url"
                app:layout_constraintTop_toBottomOf="@+id/website_url" />

            <CheckBox
                android:id="@+id/is_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/is_your_group_private"
                app:layout_constraintStart_toStartOf="@+id/textView41"
                app:layout_constraintTop_toBottomOf="@+id/textView41" />

            <View
                android:id="@+id/divider18"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView34" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>